# citros

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  READMEjp.md  qemu_run.sh
.github/: labeler.yml
.github/workflows/: dependency-review.yml  label.yml  rust-clippy.yml  rust.yml
src/: main.rs
src/loaderPkg/: main.rs
